fixtures/cs-rng-02/good/random-bytes-16-token.ts
import { randomBytes } from "crypto";
export function generateSessionToken() {
	return randomBytes(16).toString("hex");
}
