fixtures/cs-rng-02/bad/random-bytes-8-session.ts
import { randomBytes } from "crypto";
export function generateSessionToken() {
	return randomBytes(8).toString("hex");
}
